Aggregate pipeline with Whole Row Group Fetch && Final Clean UP